amethyst/kubernetes/mydata/base/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: mydata
  name: mydata-default-policy
specs:
  - endpointSelector:
      matchLabels: {}
    ingress:
      - {}
    egress:
      - {}
